# django-nix-package-example

./: .editorconfig  .gitignore  README.md  default.nix  flake.nix
backend/: .coveragerc  Makefile  default.nix  pyproject.toml  setup.cfg
backend/example_project/config/: __init__.py  urls.py  wsgi.py
backend/example_project/config/settings/: base.py  dev.py
backend/example_project/core/: apps.py
backend/example_project/templates/: base.html
backend/scripts/: run_tests.sh
frontend/: default.nix  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/js/: index.js
frontend/nix/: node-packages.nix
